--- a/F&B/css/F&B.css
+++ b/F&B/css/F&B.css
@@ -464,9 +464,8 @@ footer p{padding: 440px 0 0 20px;font-size: 10px;}
     right: -9px;
     font-size: 25px;
   }
-  /* #btn-menu i.icon.icon-cancel{color: #fff;} */
   header nav .gnb-nav > li{float: none;}
-  /* 컨텐츠 100% dispaly:block */
+  /* 컨텐츠 100% display:block */
   header nav .gnb-nav > li > a{
     color: #fff;
     text-decoration: none;
@@ -531,7 +530,25 @@ footer p{padding: 440px 0 0 20px;font-size: 10px;}
     font-size: 25px;
   }
   .icon.icon-heart span, #btn-login .textchange{display: none;}
-  /* .search-form{display: none;} */
+
+  /* 모바일 쇼핑백 팝업 */
+  .icon.icon-cancel{
+    display: none;
+    font-size: 35px;
+    top: 46px;
+    margin-left: 28px;
+  }
+  .popup-icon-shop{
+    display: none;
+    top: 55px;
+    width: 100%;
+    height: 613px;
+  }
+  .popup-icon-shop div{width: 100%;}
+  .popup-icon-shop div img{width: 113px;}
+  .popup-icon-shop div dl{height: 150px;width: 100%;}
+  .popup-icon-shop .btn-group button:nth-of-type(1){width: 100%;}
+  .popup-icon-shop .btn-group button:nth-of-type(2){width: 100%;}
 
   /* section */
   /* 메인이미지 */
@@ -546,26 +563,42 @@ footer p{padding: 440px 0 0 20px;font-size: 10px;}
   .main-link{display: none;}
   .main a img{display: none;}
   /* 메인이미지 모바일 드롭다운(아코디언) */
-  #main-accordion{display: block;}
-  #main-accordion ul{}
-  #main-accordion > ul > li{}
-  #main-accordion > ul > li > a{}
-  #main-accordion > ul > li .box{}
-  #main-accordion > ul > li .box.active{}
-  #main-accordion > ul > li div li{}
-  #main-accordion > ul > li div li:nth-child(1){}
-  #main-accordion > ul > li div li:nth-child(2){}
-  #main-accordion > ul > li div li:nth-child(3){}
-  #main-accordion > ul > li div li a{}
-
+  li{list-style: none;}
+  a{text-decoration: none; color:#000;}
+  #main-accordion{
+    width:100%; margin: auto;
+    display: block;
+  }
+  #main-accordion ul{
+  }
+  #main-accordion ul > li{
+  }
+  #main-accordion ul > li:last-child{
+    border-bottom:0;
+  }
+  #main-accordion ul > li > a{
+    display: block;
+    line-height: 50px;
+    width: 100%;
+    height: auto;
+  }
+  #main-accordion ul > li .box.active{
+    text-align: center;
+  }
+  #main-accordion ul > li .box{
+    display: none;
+    background: #cecece;
+    padding: 20px;
+  }
+  #main-accordion ul > li div a:hover{text-decoration: underline;}
 
   /* product images */
-
   /* 스와이퍼 슬라이드 */
-  .slide-images{padding-top: 40px;}
+  /* .slide-images{padding-top: 40px;} */
   .product-slide{width: 100%;}
   .desktop-slide{display: none;}
   .mobile-slide1, .mobile-slide2{display: block;}
+  /* .swiper-wrapper .swiper-slide div img.img{padding-top: 40px;} */
 
   /* event images */
   .event{height: auto;}
