--- a/sidmool/css/nature4.css
+++ b/sidmool/css/nature4.css
@@ -33,7 +33,6 @@ header h1 img{
   position: relative;
   left: 50%;
   transform: translateX(-50%);
-  /* padding: 30px 0; */
 }
 header nav{height: 170px;z-index: 1;}
 header nav .bgwrap .wrap{padding-top: 10px;text-align: center;height: 20px;position: relative;}
@@ -53,7 +52,6 @@ header nav .bgwrap .wrap .nav > li > a{
 }
 header nav .bgwrap .wrap .nav li:hover > a{background: #fff;}
 /* 마우스 오버 시, 빨간밑줄(a) */
-/* > 으로 요소를 선택해야 각 a요소 마다 빨간 밑줄을 적용시킬 수 있음 */
 header nav .bgwrap .wrap .nav > li > a::after{
   content: '';position: absolute;width: 0%;height: 5px;background: green; bottom: 0px;
   left: 50%; transform: translate(-50%);
@@ -62,11 +60,10 @@ header nav .bgwrap .wrap .nav > li > a::after{
 header nav .bgwrap .wrap .nav li.active > a::after,
 header nav .bgwrap .wrap .nav li:hover > a::after{width: 100%;}
 
-
-/* 회전효과(영문메뉴를 한글메뉴로 바꾸기)(span요소가 필요) */
+/* 회전효과(영문메뉴를 한글메뉴로 바꾸기) */
 header nav .nav > li > a span:nth-child(1){position: relative;transform: rotateX(0deg);}
 header nav .nav > li.active > a span:nth-child(1),/*스크립트 적용:클릭 (active)될 때*/
-header nav .nav > li:hover > a span:nth-child(1){transform: rotateX(180deg);color: #fff;/*회전할 때 영문 컬러를 흰색으로*/}
+header nav .nav > li:hover > a span:nth-child(1){transform: rotateX(180deg);color: #fff;}
 header nav .nav > li > a span{
   backface-visibility: hidden;
   display: block;
@@ -77,7 +74,6 @@ header nav .nav > li > a span.ko{
   transform: rotateX(180deg);
   position: absolute;left: 0px; top: 0;
   color: green;
-  /*영문메뉴로 바뀔 때, 빨간밑줄을 가운데정렬한다.*/
   width: 100%;
   text-align: center;
 }
@@ -89,9 +85,6 @@ header nav .nav > li.hover:nth-child(2) > a::after{width: 30%;text-align: center
 
 /* 2depth */
 header nav .nav li ul{
-  display:none;
-}
-header nav .nav li ul.menu{
   padding: 0 0 0 10px;
 }
 /* 부트스트랩 서브메뉴 */
@@ -103,18 +96,17 @@ header nav .nav li ul.menu{
 .submenu-all{width: 800px;}
 .dropdown-menu:hover{}
 .dropdown-menu li ul li{padding: 0 5px;}
-/* .dropdown-menu li:nth-child(4) ul{display: inline-flex;} */
 .dropdown-menu > li:hover > a{color: green;}
 .dropdown-menu > li > a{padding-right: 348px;}
+.nav li:nth-child(2) > ul > li > a.test{color: #2d502d;font-weight: bold;}
 .menu li a{font-size: 12px;color: #000;}
 
 /* 통합검색 =============================================================*/
 .search{
-  right: 0;
-  position: absolute;
-  margin-right: 10px;
+  /* right: 0; */
+  position: fixed;
+  margin: 55px 0 0 171px;
   top: 0;
-  /* padding-top: 30px; */
 }
 .form-wrap input{display: block;margin: 5px 0 5px 31px;width: 234px;}
 .btn-search-open{
@@ -174,6 +166,7 @@ nav, nav *{transition: all 0.5s;}
 header.on .quickbar{
   box-shadow: 0 0 10px 5px rgba(0,0,0,0.2);
   left: 0;
+  z-index: 1;
 }
 /* 버튼 */
 #btn-menu{
@@ -181,7 +174,12 @@ header.on .quickbar{
   position: absolute;
   top: 12px;
   right: -35px;
-  font-size: 25px;}
+  font-size: 25px;
+  transform: translateX(648%);
+}
+button.icon-cancel{
+  left: 173px;
+}
   /* quick bar 전체 */
   .quickbar{
     position: fixed;
@@ -190,8 +188,8 @@ header.on .quickbar{
     /* left 값은 quickbar전체가 옆으로 숨은 정도 */
     /* width는 quickbar전체가의 넓이이므로 */
     /* +-를 뺀 left와 width의 값이 같아야 한다. */
-    left: -20%;
-    width: 20%;
+    left: -320px;
+    width: 320px;
     height: 100%;
     background: #333;
     transition: left 0.5s;
@@ -207,7 +205,6 @@ header.on .quickbar{
     height: auto;
     overflow-x: hidden;
     overflow-y: auto;}
-button.icon-cancel{}
 /* 퀵바 컨텐츠 */
 .btn-nav li ul{padding: 10px 0;}
 .btn-nav li ul li{line-height: 30px;}
@@ -272,19 +269,9 @@ button.icon-cancel{}
   width: 100%;
   /* 메뉴 접어놓기*/
   display: none;
-  /* opacity: 1; */
 }
 .btn-nav .menulist, .btn-nav .q-center, .btn-nav .q-recommend{display: none;}
-/* .btn-nav li ul.on{
-  display: block;
-} */
-/* .btn-nav li ul li{display: none;} */
-/* .btn-nav li ul li.on{
-  display: block;
-} */
 .btn-nav li ul li{list-style: none;height: auto;display: block;}
-/* .btn-nav li:hover ul{
-  display: block;} */
 .btn-nav li ul li a{
   font-size: 14px;
   line-height: 40px;
@@ -295,6 +282,7 @@ button.icon-cancel{}
 .btn-nav li ul.box{display: none;}
 .btn-nav li ul.box.active{
   height: auto;}
+
 /* section ==============================================================*/
 /* 메인 스와이퍼 */
 .main{padding: 30px 0 !important;}
@@ -329,15 +317,6 @@ button.icon-cancel{}
   display: inline-block;
   cursor: pointer;
   font-size: 24px;}
-/* #n-product .new-p-main-title h2::after{
-  content: '';
-  display: inline-block;
-  width: 1100px;
-  height: 1px;
-  background: #000;
-  bottom: -30px;
-  left: 0;
-  position: absolute;} */
 #n-product .new-p-main-title a{
   font-size: 20px;
   color: #000;
@@ -390,24 +369,13 @@ button.icon-cancel{}
   top: -117%;
   transform: translateX(-254%);
 }
-/* .wrap_gallary h1::after{
-  content: '';
-  display: inline-block;
-  width: 1100px;
-  height: 1px;
-  background: #000;
-  bottom: -30px;
-  right: 50%;
-  margin-left: -97px;
-  position: absolute;
-  transform: translateX(50%);
-} */
 .swiper-container{padding-top: 97px;padding-bottom: 100px;
   height: 290px !important;
 }
 .swiper-slide-main-text h2{color: #8ccc8c;}
 .swiper-slide-main-text p{padding-left: 20px;}
-.swiper-slide-main-text button{border: 1px solid #abdc87;border-left: 0;border-right: 0;background: #fff;}
+.swiper-slide-main-text button{border: 1px solid #abdc87;border-left: 0;
+  border-right: 0;background: #fff;}
 .swiper-bg{display: none;}
 .swiper-bg a span{
   position: absolute;
@@ -418,7 +386,8 @@ button.icon-cancel{}
 .swiper-slide .swiper-slide-text{padding: 0 50px;}
 .swiper-slide .swiper-slide-text h2{color: #8ed08e;}
 .swiper-slide .swiper-slide-text p{font-size: 20px;padding: 5px 10px;color: #000;}
-.swiper-slide .swiper-slide-text button{border: 1px solid #abdc87;border-left: 0;border-right: 0;background: #fff;}
+.swiper-slide .swiper-slide-text button{border: 1px solid #abdc87;
+  border-left: 0;border-right: 0;background: #fff;}
 
 /* 탭메뉴 & 데일리 추천 ====================================================*/
 .tab-section{
@@ -428,7 +397,6 @@ button.icon-cancel{}
   margin: auto;
   padding-left: 80px;
 }
-/* .t-d{height: 450px;} */
 
 /* 라인 */
 #line{
@@ -452,17 +420,14 @@ button.icon-cancel{}
 #line .items{}
 .item1{}
 .item1 a.rss{display: inline-block; margin-top: 60px;}
-/* #t-d-content #line div .items .box{width: 500px;height: 300px;background: #dbecd7;} */
 #line1{height: 0;}
 .img-wrap{width: auto;height: auto;}
 #line1 img{}
 #line1 p{}
-/* #t-d-content #line .items .box{} */
 
 .line-content{font:13px 'NGothic', Gulim;}
 .line-content::after{content: ''; display: block; clear: both;}
 .line-content h1{float: left; width:215px;
-  /* padding: 0 0 0 10px; */
 }
 .line-content h1:nth-child(3){clear: both;}
 .line-content h1 img{width: 100%;}
@@ -496,7 +461,7 @@ button.icon-cancel{}
   font-size: 20px;
 }
 .board-wrap div ul{text-align: center;padding-top: 20px;}
-.board-wrap div ul li{display: inline-block;padding-top: 10px;}
+.board-wrap div ul li{padding-top: 10px;}
 .board-wrap div ul li a{color: #000;text-decoration: underline;}
 .board-wrap div button{
   background: #fff;
@@ -513,7 +478,6 @@ button.icon-cancel{}
 /* 포토후기/sns */
 .photo-sns{width: 1100px;margin: auto;}
 /* 포토후기 */
-/* .section-photo{height: 400px;background: #dbecd7;} */
 .photo-wrap{
   width: 350px;
   height: 400px;
@@ -595,7 +559,6 @@ button.icon-cancel{}
 }
 
 /* sns */
-/* .section-sns{height: 500px;background: #fff;} */
 .sns-text-wrap{
   width: 340px;
   height: 400px;
@@ -632,11 +595,6 @@ button.icon-cancel{}
   width: 400px;
   margin-left: 0;
 }
-/* .sns-wrap .sns-text{
-  width: 200px;height: auto;
-  display: inline-block;
-  padding-top: 50px;
-} */
 .sns-wrap div h1{
   font-weight: bold;
   font-size: 20px;
@@ -704,7 +662,6 @@ button.icon-cancel{}
   opacity: 0;
   visibility: hidden;
   transition: all 0.5s;
-  /* text-decoration: none !important; */
 }
 .sns-wrap .sns-images > div:hover a{
   opacity: 1;
@@ -730,7 +687,6 @@ footer .citemap .sns{
   transform: translateX(-50%);}
 footer .sns li{float: left; padding: 0 15px;}
 footer .sns li button{color:#fff; font-size: 30px; transition: 0.5s;}
-/* transition: color 0.5s; --> 색깔 바뀌는 속도 적용 시 */
 footer .sns li button.icon-blogger-rect:hover{color: #00c43b;}
 footer .sns li button.icon-facebook-rect:hover{color: #3e5a94;}
 footer .sns li button.icon-twitter-bird:hover{color: #42afda;}
@@ -763,7 +719,6 @@ html, body {
       text-align: center;
       font-size: 18px;
       background: #fff;
-      /* Center slide text vertically */
       display: -webkit-box;
       display: -ms-flexbox;
       display: -webkit-flex;
@@ -778,6 +733,5 @@ html, body {
       align-items: center;
     }
 
-/* 부트스트랩     */
+/* 부트스트랩 */
 .nav .open>a, .nav .open>a:focus, .nav .open>a:hover{background-color: #fff;}
-/* 미디어쿼리================================================================= */
