--- a/F&B/css/F&B.css
+++ b/F&B/css/F&B.css
@@ -8,6 +8,7 @@
 .intro small{position: absolute; bottom:30px; left:50%; transform: translateX(-50%);
   width: 250px;text-align: center; color:#fff; font-size: 12px;}
 
+body{width: 100%;}
 /* header */
 header .center{height: 200px;z-index: 2;position: relative;}
 header h1{padding-top: 60px; text-align: center;}
@@ -227,22 +228,24 @@ section{}
 
 
 /* footer */
-footer{height: 600px; background: #000; color:#777; font-size: 13px; text-align: center;}
-footer .center{height: 600px;}
+footer{height: auto; background: #000; color:#777; font-size: 13px; text-align: center;}
+footer .center{height: auto;}
 /* footer .center .sub-nav h1{display: none;} */
 footer .center small{}
 footer .center img{
-  position: absolute;
+  /* position: absolute;
   bottom: 0;
   padding-bottom: 45px;
   transform: translateX(50%);
-  right: 50%;
+  right: 50%; */
+  display: block;
+  margin: 100px auto 0;
 }
 footer .sub-nav{
-  position: absolute;
-  width: 917px;
-  left: 50%;
-  transform: translateX(-50%);
+  /* position: absolute; */
+  width: 100%;
+  /* left: 50%; */
+  /* transform: translateX(-50%); */
   padding-top: 50px;
 }
 footer .sub-nav ul > li, footer .sub-nav ul > li div li{font-size: 18px;text-decoration: none;}
@@ -254,8 +257,9 @@ footer .sub-nav ul div li:nth-child(4){font-size: 16px;}
 footer .sub-nav ul li div li a, footer .sub-nav ul li a{color:#eee;}
 footer .sub-nav ul li span{display: none;}
 
-footer .sub-nav .category{float: left;padding-right: 310px;}
-footer .sub-nav .customer{float: left;padding-right: 310px;}
+/* footer .sub-nav .category{float: left;padding-right: 310px;} */
+/* footer .sub-nav .customer{float: left;padding-right: 310px;} */
+footer .sub-nav .newsletter{clear: both;display: block;}
 footer .sub-nav .newsletter li button{
   width: 90px;height: 30px; background: #fff;
   font-size: 16px;
@@ -265,9 +269,16 @@ footer .sub-nav .newsletter li button{
 /* pc 아코디언 수정 */
 footer .center .sub-nav #accordion{display: none;}
 /* footer #accordion, footer .mobile-skip{display: none;} */
-#accordion .category > div, #accordion .customer > div{display: block;}
+#accordion .category > div.fnaviaccodi1{display: none;}
+#accordion .customer > div.fnaviaccodi2{display: none;}
 
-footer .sns{position: absolute; top: 310px; left: 50%; transform: translateX(-50%);}
+footer .sns{
+  /* position: absolute; top: 310px; left: 50%; transform: translateX(-50%); */
+  margin: auto;
+  width: 350px;
+  padding: 15px 0;
+  overflow: hidden;
+}
 footer .sns li{float: left; padding: 0 15px;}
 footer .sns li button{color:#fff; font-size: 30px; transition: color 0.5s;}
 footer .sns li button.icon-facebook-official:hover{color:#3b5a9a;}
@@ -275,7 +286,7 @@ footer .sns li button.icon-twitter:hover{color:#2aade3;}
 footer .sns li button.icon-youtube-play:hover{color:#cb2129;}
 footer .sns li button.icon-instagram:hover{color: #883bb3;}
 footer .sns li button.icon-pinterest-circled:hover{color: #bd081b;}
-footer p{padding: 440px 0 0 20px;font-size: 10px;}
+footer p{padding: 100px 0 0 20px;font-size: 10px;}
 
 /* popup ==================================================================*/
 /* 쇼핑백 팝업 */
@@ -721,7 +732,7 @@ footer p{padding: 440px 0 0 20px;font-size: 10px;}
   #accordion ul div li .box.active{background: #a7a7a5;display: block;}
   /* 아코디언에서 보여주는 부분을 display:none;으로 기본 셋팅해줘야
   대표메뉴를 클릭했을 때 높이가 자동으로 줄었다가 늘어났다가 한다.  */
-  #accordion .category > div, #accordion .customer > div{display: none;}
+  /* #accordion .category > div, #accordion .customer > div{display: none;} */
 
   /* sns */
   footer .sns{
@@ -868,19 +879,21 @@ footer p{padding: 440px 0 0 20px;font-size: 10px;}
         .magazine{height: auto;}
         .magazine-wrap{height: auto;}
         .magazine-wrap div ul{}
-        footer .sub-nav{width: 768px;}
-        footer .sub-nav .category{padding-right: 100px;}
-        footer .sub-nav .customer{padding-right: 100px;float: none;}
+        /* footer .sub-nav{width: 768px;} */
+        /* footer .sub-nav .category{padding-right: 100px;} */
+        footer .sub-nav .customer{
+          /* padding-right: 100px; */
+          float: none;}
         .editorPick{width: 33.33%;}
         .theItem{width: 33.33%;}
         .everydayIcon{width: 33.33%;}
         .newsletter{
-          display: inline-block;
+          /* display: inline-block;
           float: right;
           position: absolute;
           right: 0;
           top: 50px;
-          width: 100px;
+          width: 100px; */
         }
 
 
