--- a/F&B/css/F&B.css
+++ b/F&B/css/F&B.css
@@ -690,82 +690,76 @@ footer .sns li button.icon-pinterest-circled:hover{color: #bd081b;}
 
 /* 태블릿================================================================ */
 @media (min-width:768px) and (max-width:1119px) {
-      .gnb-nav{
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 1;
-        width: 650px;
-      }
-      /* 네비메뉴 토글 */
-      #togglemenu{
-        display: none;
-        opacity: 1;
-        position: absolute;
-        top: 12px;
-        font-size: 25px;
-      }
-      header .center #btn-login button.icon{padding-top: 20px;}
-      header #btn-login{position: absolute;top: 0;right: 0px;height: 0px;}
-      .icon.icon-heart span, #btn-login .textchange{display: none;}
-      /* 하트, 쇼핑백 아이콘 */
-      .icon.icon-heart::before, .icon-shopping-bag::before{font-size: 20px;}
+  /* 네비게이션 */
+  .gnb-nav{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    width: 650px;
+  }
+  header .center .gnb-nav .nav-bg{width: 100%;left: auto;}
+  header .center #btn-login button.icon{padding-top: 20px;}
+  header #btn-login{position: absolute;top: 0;right: 0px;height: 0px;}
+  .icon.icon-heart span, #btn-login .textchange{display: none;}
+  /* 하트, 쇼핑백 아이콘 */
+  .icon.icon-heart::before, .icon-shopping-bag::before{font-size: 20px;}
 
-      /* 메인 이미지 */
-      section{padding-top: 150px;}
-      .main-image .main-wrap .main{padding: 0;}
-      .main-image .main-wrap .main img.pc{display: none;}
-      .main-image .main-wrap .main img.mobile{display: block;opacity: 1;padding-top: 0;width: 100%;}
-      .main-text img{display: none;}
-      .main-link{display: none;}
-      .main a img{display: none;}
+  /* 메인 이미지 */
+  section{padding-top: 150px;}
+  .main-image .main-wrap .main{padding: 0;}
+  .main-image .main-wrap .main img.pc{display: none;}
+  .main-image .main-wrap .main img.mobile{display: block;opacity: 1;padding-top: 0;width: 100%;}
+  .main-text img{display: none;}
+  .main-link{display: none;}
+  .main a img{display: none;}
 
-      /* 이벤트 */
-      .event{height: auto;}
-      .event .event-wrap .app-event{
-        width: 50%;
-        height: 456px;
-        background-size: contain;
-        float: left;
-      }
-      .event .event-wrap .off-event{
-        width: 50%;
-        background-size:contain;
+  /* 이벤트 */
+  .event{height: auto;}
+  .event .event-wrap .app-event{
+    width: 50%;
+    height: 456px;
+    background-size: contain;
+    float: left;
+  }
+  .event .event-wrap .off-event{
+    width: 50%;
+    background-size:contain;
 
-      }
-      .event .event-wrap .off-event p:nth-child(1){
-        text-align: center;
-        color: #000;
-        padding-top: 50px;
-        font-size: 18px;}
-      .event .event-wrap .off-event p.letter{
-        text-align: center;
-        padding-top: 100px;
-        font-size: 15px;}
-      .event .event-wrap .off-event a:nth-child(2) img{padding-top: 75px;}
-      .event .event-wrap .off-event li a{color: #000;}
-      .event .event-wrap .off-event li{
-        padding-top: 0;
-        position: absolute;
-        right: 50%;
-        transform: translateX(50%);
-        bottom: 48px;
-        text-decoration: underline;
-      }
-      .off-event > a, .off-event p{
-        display: none;
-        }
-
-      /* 매거진 */
-      .magazine{height: auto;}
-      .magazine-wrap{height: auto;}
-      .magazine-wrap div ul{}
-      footer .sub-nav .customer{
-        float: none;}
-      .editorPick{width: 33.33%;}
-      .theItem{width: 33.33%;}
-      .everydayIcon{width: 33.33%;}
-      .newsletter{
-      }
+  }
+  .event .event-wrap .off-event p:nth-child(1){
+    text-align: center;
+    color: #000;
+    padding-top: 50px;
+    font-size: 18px;}
+  .event .event-wrap .off-event p.letter{
+    text-align: center;
+    padding-top: 100px;
+    font-size: 15px;}
+  .event .event-wrap .off-event a:nth-child(2) img{padding-top: 75px;}
+  .event .event-wrap .off-event li a{color: #000;}
+  .event .event-wrap .off-event li{
+    padding-top: 0;
+    position: absolute;
+    right: 50%;
+    transform: translateX(50%);
+    bottom: 48px;
+    text-decoration: underline;
+  }
+  .off-event > a, .off-event p{
+    display: none;
     }
+
+  /* 매거진 */
+  .magazine{height: auto;}
+  .magazine-wrap{height: auto;}
+  .magazine-wrap div ul{}
+  footer .sub-nav .customer{
+    float: none;}
+  .editorPick{width: 33.33%;}
+  .theItem{width: 33.33%;}
+  .everydayIcon{width: 33.33%;}
+  .newsletter{
+  }
+}
