--- a/sidmool/css/sub.css
+++ b/sidmool/css/sub.css
@@ -259,7 +259,8 @@ button.icon-cancel{
 .btn-nav li ul.box.active{
   height: auto;}
 
-/* section ==============================================================*/
+/* sub 상세 페이지 =======================================================*/
+/* section */
 section{height: 3000px;margin: auto;}
 section .center{width: 720px;padding-left: 10px;}
 /* 상세 페이지 네비게이션 button */
