--- a/F&B/css/common.css
+++ b/F&B/css/common.css
@@ -1,8 +1,5 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-public function queue_font_css(){
-wp_enqueue_style('ex-hangulfont-'. $this->main->getEng(), 'https://fonts.googleapis.com/earlyaccess/'.strtolower($this->main->getEng()).'.css');
-}
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
 /* fontello */
 /*재설정: 각 파일 경로 지정해주기================================*/
 @font-face {
