--- a/F&B/css/common.css
+++ b/F&B/css/common.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+/* @import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css); */
 /* fontello */
 /*재설정: 각 파일 경로 지정해주기================================*/
 @font-face {
