--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -50,7 +50,6 @@ body {
 hr {
     max-width: 80px;
     border-width: 3px;
-    opacity: 0.09;
     margin-top: 15px;
     margin-bottom: 15px;
 }
@@ -80,7 +79,7 @@ p {
     font-size: 17px;
     line-height: 1.7;
     margin-bottom: 20px;
-    color: #000;
+    color: #fff;
 }
 
 .wide-space {
@@ -195,7 +194,7 @@ footer {
 
 @media(min-width:768px) {
     .navbar-default {
-        border-color: transparent;        
+        border-color: transparent;
         min-height: 60px;
     }
 
@@ -383,7 +382,7 @@ textarea {
 
 .margin-top-0 {
     margin-top: 0;
-    color: #000;
+    color: #fff;
 }
 
 .feature {
