--- a/sidmool/css/common.css
+++ b/sidmool/css/common.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* 나눔고딕 */
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
 /* fontello */
 /* fontello demo.html파일에서 가져옴 */
 @font-face {
