--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -12,6 +12,7 @@ ul.text-muted, .text-muted li{list-style-type: none;}
 /* footer */
 .pull-right{font-size: 25px;width: 100%;}
 footer .container-fluid .footer-textalign{text-align: center;}
+.contact-bg .fotexth2{color: #fff;}
 .contact-bg .fotext{color: #fff;}
 
 
